Reformat with previously added intellij code style