@@ -7,13 +7,6 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.controlsfx.control.CheckListView;
-import org.janelia.saalfeldlab.paintera.meshes.MeshExporter;
-import org.janelia.saalfeldlab.paintera.meshes.MeshExporterBinary;
-import org.janelia.saalfeldlab.paintera.meshes.MeshExporterObj;
-import org.janelia.saalfeldlab.paintera.meshes.MeshInfo;
-import org.janelia.saalfeldlab.paintera.meshes.MeshInfos;
-
 import javafx.beans.binding.Bindings;
 import javafx.beans.binding.BooleanBinding;
 import javafx.beans.value.ChangeListener;
@@ -29,14 +22,22 @@ import javafx.scene.layout.GridPane;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.VBox;
 import javafx.stage.DirectoryChooser;
+import org.controlsfx.control.CheckListView;
+import org.janelia.saalfeldlab.paintera.meshes.MeshExporter;
+import org.janelia.saalfeldlab.paintera.meshes.MeshExporterBinary;
+import org.janelia.saalfeldlab.paintera.meshes.MeshExporterObj;
+import org.janelia.saalfeldlab.paintera.meshes.MeshInfo;
+import org.janelia.saalfeldlab.paintera.meshes.MeshInfos;
 
-public class MeshExporterDialog< T > extends Dialog< ExportResult< T > >
+public class MeshExporterDialog<T> extends Dialog<ExportResult<T>>
 {
 
 	public static enum FILETYPE
 	{
 		obj, binary
-	};
+	}
+
+	;
 
 	final int LIST_CELL_HEIGHT = 25;
 
@@ -46,220 +47,237 @@ public class MeshExporterDialog< T > extends Dialog< ExportResult< T > >
 
 	private final String[] filePaths;
 
-	private MeshExporter< T > meshExporter;
+	private MeshExporter<T> meshExporter;
 
 	private long[][] fragmentIds;
 
 	private long[] segmentIds;
 
-	private ComboBox< String > fileFormats;
+	private ComboBox<String> fileFormats;
 
-	private CheckListView< Long > checkListView;
+	private CheckListView<Long> checkListView;
 
 	private final BooleanBinding isError;
 
-	public MeshExporterDialog( final MeshInfo< T > meshInfo )
+	public MeshExporterDialog(final MeshInfo<T> meshInfo)
 	{
 		super();
-		this.segmentIds = new long[] { meshInfo.segmentId() };
-		this.fragmentIds = new long[][] { meshInfo.containedFragments() };
+		this.segmentIds = new long[] {meshInfo.segmentId()};
+		this.fragmentIds = new long[][] {meshInfo.containedFragments()};
 		this.filePath = new TextField();
-		this.filePaths = new String[] { "" };
-		this.setTitle( "Export mesh " + this.segmentIds );
-		this.isError = ( Bindings.createBooleanBinding( () -> filePath.getText().isEmpty(), filePath.textProperty() ) );
-		scale = new TextField( Integer.toString( meshInfo.scaleLevelProperty().get() ) );
+		this.filePaths = new String[] {""};
+		this.setTitle("Export mesh " + this.segmentIds);
+		this.isError = (Bindings.createBooleanBinding(() -> filePath.getText().isEmpty(), filePath.textProperty()));
+		scale = new TextField(Integer.toString(meshInfo.scaleLevelProperty().get()));
 
-		setNumericTextField( scale, meshInfo.numScaleLevels() - 1 );
-		setResultConverter( button -> {
-			if ( button.getButtonData().isCancelButton() ) { return null; }
-			return new ExportResult( meshExporter, fragmentIds, segmentIds, Integer.parseInt( scale.getText() ), filePaths );
-		} );
+		setNumericTextField(scale, meshInfo.numScaleLevels() - 1);
+		setResultConverter(button -> {
+			if (button.getButtonData().isCancelButton()) { return null; }
+			return new ExportResult(
+					meshExporter,
+					fragmentIds,
+					segmentIds,
+					Integer.parseInt(scale.getText()),
+					filePaths
+			);
+		});
 
 		createDialog();
 
 	}
 
-	public MeshExporterDialog( final MeshInfos< T > meshInfos )
+	public MeshExporterDialog(final MeshInfos<T> meshInfos)
 	{
 		super();
-		final ObservableList< MeshInfo< T > > meshInfoList = meshInfos.readOnlyInfos();
+		final ObservableList<MeshInfo<T>> meshInfoList = meshInfos.readOnlyInfos();
 		this.filePath = new TextField();
-		this.setTitle( "Export mesh " );
-		this.segmentIds = new long[ meshInfoList.size() ];
-		this.fragmentIds = new long[ meshInfoList.size() ][];
-		this.filePaths = new String[ meshInfoList.size() ];
+		this.setTitle("Export mesh ");
+		this.segmentIds = new long[meshInfoList.size()];
+		this.fragmentIds = new long[meshInfoList.size()][];
+		this.filePaths = new String[meshInfoList.size()];
 		this.checkListView = new CheckListView<>();
-		this.isError = ( Bindings.createBooleanBinding( () -> filePath.getText().isEmpty() || checkListView.getItems().isEmpty(), filePath.textProperty(),
-				checkListView.itemsProperty() ) );
+		this.isError = (Bindings.createBooleanBinding(() -> filePath.getText().isEmpty() || checkListView.getItems()
+						.isEmpty(),
+				filePath.textProperty(),
+				checkListView.itemsProperty()
+		                                             ));
 
-		int minCommonScaleLevels = Integer.MAX_VALUE;
-		int minCommonScale = Integer.MAX_VALUE;
-		final ObservableList< Long > ids = FXCollections.observableArrayList();
-		for ( int i = 0; i < meshInfoList.size(); i++ )
+		int                        minCommonScaleLevels = Integer.MAX_VALUE;
+		int                        minCommonScale       = Integer.MAX_VALUE;
+		final ObservableList<Long> ids                  = FXCollections.observableArrayList();
+		for (int i = 0; i < meshInfoList.size(); i++)
 		{
-			final MeshInfo< T > info = meshInfoList.get( i );
-			this.segmentIds[ i ] = info.segmentId();
-			this.fragmentIds[ i ] = info.containedFragments();
-			ids.add( info.segmentId() );
+			final MeshInfo<T> info = meshInfoList.get(i);
+			this.segmentIds[i] = info.segmentId();
+			this.fragmentIds[i] = info.containedFragments();
+			ids.add(info.segmentId());
 
-			if ( minCommonScaleLevels > info.numScaleLevels() )
+			if (minCommonScaleLevels > info.numScaleLevels())
 			{
 				minCommonScaleLevels = info.numScaleLevels();
 			}
 
-			if ( minCommonScale > info.scaleLevelProperty().get() )
+			if (minCommonScale > info.scaleLevelProperty().get())
 			{
 				minCommonScale = info.scaleLevelProperty().get();
 			}
 		}
 
-		scale = new TextField( Integer.toString( minCommonScale ) );
-		setNumericTextField( scale, minCommonScaleLevels - 1 );
+		scale = new TextField(Integer.toString(minCommonScale));
+		setNumericTextField(scale, minCommonScaleLevels - 1);
 
-		setResultConverter( button -> {
-			if ( button.getButtonData().isCancelButton() ) { return null; }
-			return new ExportResult<>( meshExporter, fragmentIds, segmentIds, Integer.parseInt( scale.getText() ), filePaths );
-		} );
+		setResultConverter(button -> {
+			if (button.getButtonData().isCancelButton()) { return null; }
+			return new ExportResult<>(
+					meshExporter,
+					fragmentIds,
+					segmentIds,
+					Integer.parseInt(scale.getText()),
+					filePaths
+			);
+		});
 
-		createMultiIdsDialog( ids );
+		createMultiIdsDialog(ids);
 	}
 
 	private void createDialog()
 	{
-		final VBox vbox = new VBox();
+		final VBox     vbox     = new VBox();
 		final GridPane contents = new GridPane();
 
-		int row = createCommonDialog( contents );
+		int row = createCommonDialog(contents);
 
-		final Button button = new Button( "Browse" );
-		button.setOnAction( event -> {
+		final Button button = new Button("Browse");
+		button.setOnAction(event -> {
 			final DirectoryChooser directoryChooser = new DirectoryChooser();
-			final File directory = directoryChooser.showDialog( contents.getScene().getWindow() );
-			Optional.ofNullable( directory ).map( File::getAbsolutePath );
-			filePath.setText( directory.getPath() );
+			final File             directory        = directoryChooser.showDialog(contents.getScene().getWindow());
+			Optional.ofNullable(directory).map(File::getAbsolutePath);
+			filePath.setText(directory.getPath());
 
-			for ( int i = 0; i < segmentIds.length; i++ )
+			for (int i = 0; i < segmentIds.length; i++)
 			{
-				filePaths[ i ] = directory + "/neuron" + segmentIds[ i ];
+				filePaths[i] = directory + "/neuron" + segmentIds[i];
 			}
 
-			createMeshExporter( fileFormats.getSelectionModel().getSelectedItem() );
-		} );
+			createMeshExporter(fileFormats.getSelectionModel().getSelectedItem());
+		});
 
-		contents.add( button, 2, row );
+		contents.add(button, 2, row);
 		++row;
 
-		vbox.getChildren().add( contents );
-		this.getDialogPane().setContent( vbox );
+		vbox.getChildren().add(contents);
+		this.getDialogPane().setContent(vbox);
 	}
 
-	private void createMultiIdsDialog( final ObservableList< Long > ids )
+	private void createMultiIdsDialog(final ObservableList<Long> ids)
 	{
-		final VBox vbox = new VBox();
+		final VBox     vbox     = new VBox();
 		final GridPane contents = new GridPane();
-		int row = createCommonDialog( contents );
+		int            row      = createCommonDialog(contents);
 
-		checkListView.setItems( ids );
-		checkListView.prefHeightProperty().bind( Bindings.size( checkListView.itemsProperty().get() ).multiply( LIST_CELL_HEIGHT ) );
+		checkListView.setItems(ids);
+		checkListView.prefHeightProperty().bind(Bindings.size(checkListView.itemsProperty().get()).multiply(
+				LIST_CELL_HEIGHT));
 
-		final Button button = new Button( "Browse" );
-		button.setOnAction( event -> {
+		final Button button = new Button("Browse");
+		button.setOnAction(event -> {
 			final DirectoryChooser directoryChooser = new DirectoryChooser();
-			final File directory = directoryChooser.showDialog( contents.getScene().getWindow() );
-			Optional.ofNullable( directory ).map( File::getAbsolutePath );
-			filePath.setText( directory.getPath() );
+			final File             directory        = directoryChooser.showDialog(contents.getScene().getWindow());
+			Optional.ofNullable(directory).map(File::getAbsolutePath);
+			filePath.setText(directory.getPath());
 
 			// recover selected ids
-			final List< Long > selectedIds = new ArrayList<>();
+			final List<Long> selectedIds = new ArrayList<>();
 
-			if ( checkListView.getItems().size() == 0 ) { return; }
+			if (checkListView.getItems().size() == 0) { return; }
 
-			for ( int i = 0; i < checkListView.getItems().size(); i++ )
+			for (int i = 0; i < checkListView.getItems().size(); i++)
 			{
-				if ( checkListView.getItemBooleanProperty( i ).get() == true )
+				if (checkListView.getItemBooleanProperty(i).get() == true)
 				{
-					selectedIds.add( checkListView.getItems().get( i ) );
+					selectedIds.add(checkListView.getItems().get(i));
 				}
 			}
 
-			segmentIds = selectedIds.stream().mapToLong( l -> l ).toArray();
+			segmentIds = selectedIds.stream().mapToLong(l -> l).toArray();
 
-			for ( int i = 0; i < selectedIds.size(); i++ )
+			for (int i = 0; i < selectedIds.size(); i++)
 			{
-				filePaths[ i ] = directory + "/neuron" + selectedIds.get( i );
+				filePaths[i] = directory + "/neuron" + selectedIds.get(i);
 			}
 
-			createMeshExporter( fileFormats.getSelectionModel().getSelectedItem() );
-		} );
+			createMeshExporter(fileFormats.getSelectionModel().getSelectedItem());
+		});
 
-		contents.add( button, 2, row );
+		contents.add(button, 2, row);
 		++row;
 
-		vbox.getChildren().add( checkListView );
-		vbox.getChildren().add( contents );
-		this.getDialogPane().setContent( vbox );
+		vbox.getChildren().add(checkListView);
+		vbox.getChildren().add(contents);
+		this.getDialogPane().setContent(vbox);
 	}
 
-	private int createCommonDialog( final GridPane contents )
+	private int createCommonDialog(final GridPane contents)
 	{
 		int row = 0;
 
-		contents.add( new Label( "Scale" ), 0, row );
-		contents.add( scale, 1, row );
-		GridPane.setFillWidth( scale, true );
+		contents.add(new Label("Scale"), 0, row);
+		contents.add(scale, 1, row);
+		GridPane.setFillWidth(scale, true);
 		++row;
 
-		contents.add( new Label( "Format" ), 0, row );
+		contents.add(new Label("Format"), 0, row);
 
-		final List< String > typeNames = Stream.of( FILETYPE.values() ).map( FILETYPE::name ).collect( Collectors.toList() );
-		final ObservableList< String > options = FXCollections.observableArrayList( typeNames );
-		fileFormats = new ComboBox<>( options );
-		fileFormats.getSelectionModel().select( 0 );
-		fileFormats.setMinWidth( 0 );
-		fileFormats.setMaxWidth( Double.POSITIVE_INFINITY );
-		contents.add( fileFormats, 1, row );
-		fileFormats.maxWidth( 300 );
-		GridPane.setFillWidth( fileFormats, true );
-		GridPane.setHgrow( fileFormats, Priority.ALWAYS );
+		final List<String>           typeNames = Stream.of(FILETYPE.values()).map(FILETYPE::name).collect(Collectors
+				.toList());
+		final ObservableList<String> options   = FXCollections.observableArrayList(typeNames);
+		fileFormats = new ComboBox<>(options);
+		fileFormats.getSelectionModel().select(0);
+		fileFormats.setMinWidth(0);
+		fileFormats.setMaxWidth(Double.POSITIVE_INFINITY);
+		contents.add(fileFormats, 1, row);
+		fileFormats.maxWidth(300);
+		GridPane.setFillWidth(fileFormats, true);
+		GridPane.setHgrow(fileFormats, Priority.ALWAYS);
 
 		++row;
 
-		contents.add( new Label( "Save to:" ), 0, row );
-		contents.add( filePath, 1, row );
+		contents.add(new Label("Save to:"), 0, row);
+		contents.add(filePath, 1, row);
 
-		this.getDialogPane().getButtonTypes().addAll( ButtonType.CANCEL, ButtonType.OK );
-		this.getDialogPane().lookupButton( ButtonType.OK ).disableProperty().bind( this.isError );
+		this.getDialogPane().getButtonTypes().addAll(ButtonType.CANCEL, ButtonType.OK);
+		this.getDialogPane().lookupButton(ButtonType.OK).disableProperty().bind(this.isError);
 
 		return row;
 	}
 
-	private void createMeshExporter( final String filetype )
+	private void createMeshExporter(final String filetype)
 	{
-		switch ( filetype )
+		switch (filetype)
 		{
-		case "binary":
-			meshExporter = new MeshExporterBinary<>();
-			break;
-		case ".obj":
-		default:
-			meshExporter = new MeshExporterObj<>();
-			break;
+			case "binary":
+				meshExporter = new MeshExporterBinary<>();
+				break;
+			case ".obj":
+			default:
+				meshExporter = new MeshExporterObj<>();
+				break;
 		}
 	}
 
-	private void setNumericTextField( final TextField textField, final int max )
+	private void setNumericTextField(final TextField textField, final int max)
 	{
 		// force the field to be numeric only
-		textField.textProperty().addListener( ( ChangeListener< String > ) ( observable, oldValue, newValue ) -> {
-			if ( !newValue.matches( "\\d*" ) )
+		textField.textProperty().addListener((ChangeListener<String>) (observable, oldValue, newValue) -> {
+			if (!newValue.matches("\\d*"))
 			{
-				textField.setText( newValue.replaceAll( "[^\\d]", "" ) );
+				textField.setText(newValue.replaceAll("[^\\d]", ""));
 			}
 
-			if ( Integer.parseInt( textField.getText() ) > max )
+			if (Integer.parseInt(textField.getText()) > max)
 			{
-				textField.setText( Integer.toString( max ) );
+				textField.setText(Integer.toString(max));
 			}
-		} );
+		});
 	}
 }
